--- a/New folder/index.html
+++ b/New folder/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Material Design Login Form</title>
+  <title>Login Form</title>
   
   
   
