--- a/New folder/index.html
+++ b/New folder/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Login Form</title>
+  <title>Material Design Login Form</title>
   
   
   
@@ -11,7 +11,8 @@
   
 </head>
 
-<body>
+<body  style="background:url(bg.jpg) 100% fixed;">
+<div class="main">
 <form><div class="side">
  <div class="image center">
      <img src="logo.png" >
@@ -40,7 +41,7 @@
       <div class="forgot"><a href="#">Forgot Password?</a></div>
           
           </div>
-</form>
+</form></div>
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
     <script  src="js/index.js"></script>
